GameIdent work. Auto-complete searching is coming along ayo.

--- a/Branch.App/Areas/Halo4/Views/Game/Covers/Campaign.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Game/Covers/Campaign.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Branch.App.Areas.Halo4.Models
 @using Branch.App.Helpers.Razor
 @using Branch.App.Helpers.Razor.Halo4
-@using Branch.Models.Services.Branch
 @model GameViewModel
 @{
 	var game = Model.ElapsedGame.Game;
@@ -33,14 +32,14 @@
 				<div class="ffa-victor">
 					@if (topPlayer.IsGuest)
 					{
-						<strong>@BranchHelpers.CheckGamerIdPrivacy(topPlayer.Gamertag, GamerId.X360XblGamertag)</strong>
+						<strong>topPlayer.Gamertag</strong>
 					}
 					else
 					{
-						@Html.ActionLink(BranchHelpers.CheckGamerIdPrivacy(topPlayer.Gamertag, GamerId.X360XblGamertag), "Index", "ServiceRecord", new RouteValueDictionary { { "gamertag", BranchHelpers.CheckGamerIdPrivacy(topPlayer.Gamertag, GamerId.X360XblGamertag) } }, new { @class = "alt" })
+						@Html.ActionLink(topPlayer.Gamertag, "Index", "ServiceRecord", new RouteValueDictionary { { "gamertag", topPlayer.Gamertag } }, new { @class = "alt" })
 					}
 					led the game with @topPlayer.Kills @(topPlayer.Kills == 1 ? "kill" : "kills"),
-					and a K/D of @MathHelpers.CalculateKd(topPlayer.Kills, topPlayer.Deaths, 2)
+					and a K/D of @MathHelpers.CalculateKd(topPlayer.Kills, topPlayer.Deaths)
 				</div>
 			</div>
 		</div>
