--- a/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
@@ -69,22 +69,22 @@
 			</a>
 			<ul class="nav">
 				<li>
-					<a href="http://leafapp.co/h4/record/@BranchHelpers.GamertagToLeaf(BranchHelpers.CheckGamerIdPrivacy(serviceRecord.Gamertag, GamerId.X360XblGamertag))">
+					<a href="http://leafapp.co/h4/record/@BranchHelpers.GamertagToLeaf(serviceRecord.Gamertag)">
 						Overview
 					</a>
 				</li>
 				<li>
-					<a href="http://leafapp.co/h4/compare/@BranchHelpers.GamertagToLeaf(BranchHelpers.CheckGamerIdPrivacy(serviceRecord.Gamertag, GamerId.X360XblGamertag))">
+					<a href="http://leafapp.co/h4/compare/@BranchHelpers.GamertagToLeaf(serviceRecord.Gamertag)">
 						Compare
 					</a>
 				</li>
 				<li>
-					<a href="http://leafapp.co/h4/star/@BranchHelpers.GamertagToLeaf(BranchHelpers.CheckGamerIdPrivacy(serviceRecord.Gamertag, GamerId.X360XblGamertag))">
+					<a href="http://leafapp.co/h4/star/@BranchHelpers.GamertagToLeaf(serviceRecord.Gamertag)">
 						Star
 					</a>
 				</li>
 				<li>
-					<a href="http://leafapp.co/h4/flag/@BranchHelpers.GamertagToLeaf(BranchHelpers.CheckGamerIdPrivacy(serviceRecord.Gamertag, GamerId.X360XblGamertag))">
+					<a href="http://leafapp.co/h4/flag/@BranchHelpers.GamertagToLeaf(serviceRecord.Gamertag)">
 						Flag as Cheater/Booster
 					</a>
 				</li>
