--- a/Branch.App/Areas/Halo4/Views/Game/PlayerList.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Game/PlayerList.cshtml
@@ -4,7 +4,6 @@
 @using Branch.App.Helpers.Razor.Halo4
 @using Branch.Core.Game.Halo4.Models._343.DataModels
 @using Branch.Extenders
-@using Branch.Models.Services.Branch
 @model GamePlayerListViewModel
 @{
 	var team = Model.Team ?? new Game.Team
@@ -67,8 +66,8 @@
 						}
 						else
 						{
-						@Html.ActionLink(BranchHelpers.CheckGamerIdPrivacy(player.Gamertag, GamerId.X360XblGamertag), "Index", "ServiceRecord",
-									 new { gamertag = BranchHelpers.CheckGamerIdPrivacy(player.Gamertag, GamerId.X360XblGamertag) }, new Dictionary<string, object>())
+						@Html.ActionLink(player.Gamertag, "Index", "ServiceRecord",
+									 new { gamertag = player.Gamertag }, new Dictionary<string, object>())
 						<br />
 						<strong>@player.ServiceTag</strong>
 						}
@@ -112,7 +111,7 @@
 								else
 								{
 									<div class="col-md-1 visual-flair" style="background-color: @team.PrimaryRgb; background-image: url(@GeneralHelpers.GetRawAssetUrl(player.EmblemImageUrl, 48));">
-										@BranchHelpers.CheckGamerIdPrivacy(player.Gamertag, GamerId.X360XblGamertag)
+										@player.Gamertag
 										<br />
 										<strong>@player.ServiceTag</strong>
 									</div>
@@ -156,8 +155,8 @@
 									else
 									{
 										<h2>
-											@Html.ActionLink(BranchHelpers.CheckGamerIdPrivacy(player.Gamertag, GamerId.X360XblGamertag), "Index", "ServiceRecord",
-												 new { gamertag = BranchHelpers.CheckGamerIdPrivacy(player.Gamertag, GamerId.X360XblGamertag) }, new Dictionary<string, object>())
+											@Html.ActionLink(player.Gamertag, "Index", "ServiceRecord",
+												 new { gamertag = player.Gamertag }, new Dictionary<string, object>())
 										</h2>
 										<h3 class="player-servicetag">@player.ServiceTag</h3>
 									}
@@ -216,8 +215,8 @@
 													@if (player.KilledMostGamertag == GeneralHelpers.RemoveGuestIdentifier(player.KilledMostGamertag))
 													{
 														// Not a Guest
-														@Html.ActionLink(BranchHelpers.CheckGamerIdPrivacy(player.KilledMostGamertag, GamerId.X360XblGamertag), "Index", "ServiceRecord",
-																 new { gamertag = BranchHelpers.CheckGamerIdPrivacy(player.KilledMostGamertag, GamerId.X360XblGamertag) }, new Dictionary<string, object>())
+														@Html.ActionLink(player.KilledMostGamertag, "Index", "ServiceRecord",
+																 new { gamertag = player.KilledMostGamertag }, new Dictionary<string, object>())
 													}
 													else
 													{
@@ -242,8 +241,8 @@
 													@if (player.KilledByMostGamertag == GeneralHelpers.RemoveGuestIdentifier(player.KilledByMostGamertag))
 													{
 														// Not a Guest
-														@Html.ActionLink(BranchHelpers.CheckGamerIdPrivacy(player.KilledByMostGamertag, GamerId.X360XblGamertag), "Index", "ServiceRecord",
-																  new { gamertag = BranchHelpers.CheckGamerIdPrivacy(player.KilledByMostGamertag, GamerId.X360XblGamertag) }, new Dictionary<string, object>())
+														@Html.ActionLink(player.KilledByMostGamertag, "Index", "ServiceRecord",
+																  new { gamertag = player.KilledByMostGamertag }, new Dictionary<string, object>())
 													}
 													else
 													{
