--- a/Branch.App/Views/Shared/_Layout.cshtml
+++ b/Branch.App/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
 		@AzureCdn.ScriptsRender("~/bundles/flash")
 		@AzureCdn.ScriptsRender("~/bundles/bootstrap-scripts")
+		@AzureCdn.ScriptsRender("~/bundles/branch-js")
 
 		<script>
 			$(function () { $("#flash-message-box").flashMessage(); });
