--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -64,7 +64,9 @@
 					<input id="search-input" type="text" name="q" placeholder="Search Gamertag" autocomplete="off" class="form-control" value="">
 				</div>
 
-				<div class="auto-complete-container"></div>
+				<div class="auto-complete-container-parent">
+					<div class="auto-complete-container"></div>
+				</div>
 			}
 		</div>
 	</div>
