--- a/Branch.App/Content/Styles/application.scss
+++ b/Branch.App/Content/Styles/application.scss
@@ -3,6 +3,7 @@
 .right {
 	float: right;
 }
+
 .left {
 	float: left;
 }
@@ -66,41 +67,46 @@ footer > .container > .row > .col-md-2 > .made-in {
 
 // ---- Search Stuff ----
 // --------------------------------------------
-.auto-complete-container {
-	position: absolute;
-	top: 55px;
-	right: 31px;
-	border: 1px solid #eee;
-	border-radius: 5px;
-	background: #ffffff;
-	width: 280px;
-	min-height: 100px;
-	padding: 18px;
-	box-shadow: 0 0 15px #555;
-
-	opacity: 0;
-
-	.search-divider {
-		margin-bottom: 3px;
+.auto-complete-container-parent {
+	@media (max-width: 1199px) {
+		display: none !important;
 	}
 
-	.search-header {
-		color: #bbb;
-		text-transform: uppercase;
-		font-weight: 800;
-		font-size: 13px;
-	}
-	.search-list {
-		list-style-type: none;
-		-webkit-padding-start: 0;
-		padding-left: 0;
+	.auto-complete-container {
+		position: absolute;
+		top: 55px;
+		right: 31px;
+		border: 1px solid #eee;
+		border-radius: 5px;
+		background: #ffffff;
+		width: 280px;
+		padding: 18px 18px 10px 18px;
+		box-shadow: 0 0 15px #555;
+		opacity: 0;
 
-		.search-sub-ident {
-			color: #bbb;
-			text-decoration: none;
-			font-weight: 800;
-			font-size: 11px;
+		.search-divider {
 			margin-bottom: 3px;
+		}
+
+		.search-header {
+			color: #bbb;
+			text-transform: uppercase;
+			font-weight: 800;
+			font-size: 13px;
+		}
+
+		.search-list {
+			list-style-type: none;
+			-webkit-padding-start: 0;
+			padding-left: 0;
+
+			.search-sub-ident {
+				color: #bbb;
+				text-decoration: none;
+				font-weight: 800;
+				font-size: 11px;
+				margin-bottom: 3px;
+			}
 		}
 	}
 }
@@ -109,8 +115,9 @@ footer > .container > .row > .col-md-2 > .made-in {
 // ---- Custom Anchors ----
 // --------------------------------------------
 a {
-    color: #3d3d7c;
+	color: #3d3d7c;
 }
+
 a.alt {
 	color: #ffa210;
 }
