--- a/Branch.App/Content/Styles/bootstrap-branch.scss
+++ b/Branch.App/Content/Styles/bootstrap-branch.scss
@@ -15,21 +15,21 @@
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
 }
 
-	.btn-default:active,
-	.btn-primary:active,
-	.btn-success:active,
-	.btn-info:active,
-	.btn-warning:active,
-	.btn-danger:active,
-	.btn-default.active,
-	.btn-primary.active,
-	.btn-success.active,
-	.btn-info.active,
-	.btn-warning.active,
-	.btn-danger.active {
-		-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-		box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-	}
+.btn-default:active,
+.btn-primary:active,
+.btn-success:active,
+.btn-info:active,
+.btn-warning:active,
+.btn-danger:active,
+.btn-default.active,
+.btn-primary.active,
+.btn-success.active,
+.btn-info.active,
+.btn-warning.active,
+.btn-danger.active {
+	-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+	box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
 
 .btn:active,
 .btn.active {
@@ -37,132 +37,66 @@
 }
 
 .btn-default {
-	text-shadow: 0 1px 0 #fff;
-	background-image: -webkit-linear-gradient(top, #fff 0%, #e0e0e0 100%);
-	background-image: linear-gradient(to bottom, #fff 0%, #e0e0e0 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-	background-repeat: repeat-x;
-	border-color: #dbdbdb;
+	color: #333;
+	background-color: #fff;
 	border-color: #ccc;
+
+	&:hover, &:focus, &:active, &.active {
+		color: #333;
+		background-color: #e6e6e6;
+		border-color: #adadad;
+	}
 }
-
-	.btn-default:hover,
-	.btn-default:focus {
-		background-color: #e0e0e0;
-		background-position: 0 -15px;
-	}
-
-	.btn-default:active,
-	.btn-default.active {
-		background-color: #e0e0e0;
-		border-color: #dbdbdb;
-	}
 
 .btn-primary {
-	background-image: -webkit-linear-gradient(top, #428bca 0%, #2d6ca2 100%);
-	background-image: linear-gradient(to bottom, #428bca 0%, #2d6ca2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff2d6ca2', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-	background-repeat: repeat-x;
-	border-color: #2b669a;
+	background-color: #428bca;
+	border-color: #357ebd;
+
+	&:hover, &:focus, &:active, &.active {
+		background-color: #3071a9;
+		border-color: #285e8e;
+	}
 }
-
-	.btn-primary:hover,
-	.btn-primary:focus {
-		background-color: #2d6ca2;
-		background-position: 0 -15px;
-	}
-
-	.btn-primary:active,
-	.btn-primary.active {
-		background-color: #2d6ca2;
-		border-color: #2b669a;
-	}
 
 .btn-success {
-	background-image: -webkit-linear-gradient(top, #5cb85c 0%, #419641 100%);
-	background-image: linear-gradient(to bottom, #5cb85c 0%, #419641 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5cb85c', endColorstr='#ff419641', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-	background-repeat: repeat-x;
-	border-color: #3e8f3e;
+	background-color: #5cb85c;
+	border-color: #4cae4c;
+
+	&:hover, &:focus, &:active, &.active {
+		background-color: #449d44;
+		border-color: #398439;
+	}
 }
-
-	.btn-success:hover,
-	.btn-success:focus {
-		background-color: #419641;
-		background-position: 0 -15px;
-	}
-
-	.btn-success:active,
-	.btn-success.active {
-		background-color: #419641;
-		border-color: #3e8f3e;
-	}
 
 .btn-info {
-	background-image: -webkit-linear-gradient(top, #5bc0de 0%, #2aabd2 100%);
-	background-image: linear-gradient(to bottom, #5bc0de 0%, #2aabd2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2aabd2', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-	background-repeat: repeat-x;
-	border-color: #28a4c9;
+	background-color: #5bc0de;
+	border-color: #46b8da;
+
+	&:hover, &:focus, &:active, &.active {
+		background-color: #31b0d5;
+		border-color: #269abc;
+	}
 }
-
-	.btn-info:hover,
-	.btn-info:focus {
-		background-color: #2aabd2;
-		background-position: 0 -15px;
-	}
-
-	.btn-info:active,
-	.btn-info.active {
-		background-color: #2aabd2;
-		border-color: #28a4c9;
-	}
 
 .btn-warning {
-	background-image: -webkit-linear-gradient(top, #f0ad4e 0%, #eb9316 100%);
-	background-image: linear-gradient(to bottom, #f0ad4e 0%, #eb9316 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff0ad4e', endColorstr='#ffeb9316', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-	background-repeat: repeat-x;
-	border-color: #e38d13;
+	background-color: #f0ad4e;
+	border-color: #eea236;
+
+	&:hover, &:focus, &:active, &.active {
+		background-color: #ec971f;
+		border-color: #d58512;
+	}
 }
-
-	.btn-warning:hover,
-	.btn-warning:focus {
-		background-color: #eb9316;
-		background-position: 0 -15px;
-	}
-
-	.btn-warning:active,
-	.btn-warning.active {
-		background-color: #eb9316;
-		border-color: #e38d13;
-	}
 
 .btn-danger {
-	background-image: -webkit-linear-gradient(top, #d9534f 0%, #c12e2a 100%);
-	background-image: linear-gradient(to bottom, #d9534f 0%, #c12e2a 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9534f', endColorstr='#ffc12e2a', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-	background-repeat: repeat-x;
-	border-color: #b92c28;
+	background-color: #d9534f;
+	border-color: #d43f3a;
+
+	&:hover, &:focus, &:active, &.active {
+		background-color: #c9302c;
+		border-color: #ac2925;
+	}
 }
-
-	.btn-danger:hover,
-	.btn-danger:focus {
-		background-color: #c12e2a;
-		background-position: 0 -15px;
-	}
-
-	.btn-danger:active,
-	.btn-danger.active {
-		background-color: #c12e2a;
-		border-color: #b92c28;
-	}
 
 .thumbnail,
 .img-thumbnail {
@@ -200,14 +134,14 @@
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075);
 }
 
-	.navbar-default .navbar-nav > .active > a {
-		background-image: -webkit-linear-gradient(top, #ebebeb 0%, #f3f3f3 100%);
-		background-image: linear-gradient(to bottom, #ebebeb 0%, #f3f3f3 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb', endColorstr='#fff3f3f3', GradientType=0);
-		background-repeat: repeat-x;
-		-webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, .075);
-		box-shadow: inset 0 3px 9px rgba(0, 0, 0, .075);
-	}
+.navbar-default .navbar-nav > .active > a {
+	background-image: -webkit-linear-gradient(top, #ebebeb 0%, #f3f3f3 100%);
+	background-image: linear-gradient(to bottom, #ebebeb 0%, #f3f3f3 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb', endColorstr='#fff3f3f3', GradientType=0);
+	background-repeat: repeat-x;
+	-webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 3px 9px rgba(0, 0, 0, .075);
+}
 
 .navbar-brand,
 .navbar-nav > li > a {
@@ -222,19 +156,19 @@
 	background-repeat: repeat-x;
 }
 
-	.navbar-inverse .navbar-nav > .active > a {
-		background-image: -webkit-linear-gradient(top, #222 0%, #282828 100%);
-		background-image: linear-gradient(to bottom, #222 0%, #282828 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff282828', GradientType=0);
-		background-repeat: repeat-x;
-		-webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
-		box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
-	}
+.navbar-inverse .navbar-nav > .active > a {
+	background-image: -webkit-linear-gradient(top, #222 0%, #282828 100%);
+	background-image: linear-gradient(to bottom, #222 0%, #282828 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff282828', GradientType=0);
+	background-repeat: repeat-x;
+	-webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
+	box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
+}
 
-	.navbar-inverse .navbar-brand,
-	.navbar-inverse .navbar-nav > li > a {
-		text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
-	}
+.navbar-inverse .navbar-brand,
+.navbar-inverse .navbar-nav > li > a {
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
+}
 
 .navbar-static-top,
 .navbar-fixed-top,
@@ -400,11 +334,12 @@
 // ---- Control Overrides ----
 // ---------------------------
 .progress {
-    margin-bottom: 0px;
-    background: transparent;
-    border-radius: 0px;
+	margin-bottom: 0px;
+	background: transparent;
+	border-radius: 0px;
 	border: 1px solid #428bca;
 }
+
 .progress-bar {
 	float: left;
 	width: 0;
@@ -434,10 +369,8 @@
 	padding: 40px 0;
 	color: #cdbfe3;
 	background-color: #3d3d7c;
-
 	font-size: 21px;
 	text-align: center;
-
 	padding: 30px 15px 40px;
 
 	h1 {
@@ -501,7 +434,7 @@
 				color: #999;
 				padding: 4px 20px;
 
-				&:hover, 
+				&:hover,
 				&:focus {
 					padding-left: 19px;
 					color: #563d7c;
