--- a/Branch.App/Content/Styles/application.css
+++ b/Branch.App/Content/Styles/application.css
@@ -4,6 +4,9 @@
 .left {
   float: left; }
 
+.heads-up {
+  margin-top: 40px; }
+
 .text-right {
   text-align: right; }
 
@@ -1758,5 +1761,64 @@ body.reach_file_share_recent_screenshots .file-details > .metadata {
   body.reach_file_share_recent_screenshots .file-details > .metadata span.fuck {
     color: #989898;
     font-size: 16px; }
+
+body.identity .user-auth-header {
+  height: 330px; }
+  @media (max-width: 768px) {
+    body.identity .user-auth-header {
+      height: 180px; } }
+  body.identity .user-auth-header > .container {
+    text-align: left; }
+    body.identity .user-auth-header > .container > h1 {
+      margin-top: 70px; }
+      @media (max-width: 768px) {
+        body.identity .user-auth-header > .container > h1 {
+          margin-top: auto; } }
+    body.identity .user-auth-header > .container > .holy-shit-people {
+      position: absolute;
+      top: 21px;
+      right: 80px;
+      width: 460px;
+      height: 360px; }
+      body.identity .user-auth-header > .container > .holy-shit-people > .player {
+        background-repeat: no-repeat;
+        position: absolute;
+        background-size: cover; }
+        body.identity .user-auth-header > .container > .holy-shit-people > .player.a {
+          top: 33px;
+          right: 91px;
+          z-index: 100;
+          height: 327px;
+          width: 182px; }
+        body.identity .user-auth-header > .container > .holy-shit-people > .player.b {
+          top: 144px;
+          right: 4px;
+          z-index: 99;
+          width: 121px;
+          height: 216px; }
+        body.identity .user-auth-header > .container > .holy-shit-people > .player.c {
+          top: 161px;
+          right: 217px;
+          z-index: 98;
+          width: 111px;
+          height: 199px;
+          -moz-transform: scaleX(-1);
+          -ms-transform: scaleX(-1);
+          -o-transform: scaleX(-1);
+          -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
+          -ms-filter: "FlipH";
+          filter: FlipH; }
+body.identity .details .input-section {
+  margin: 40px auto; }
+  body.identity .details .input-section .col-md-6 > .title {
+    font-size: 16px;
+    font-weight: 600; }
+  body.identity .details .input-section .col-md-6 > p > .tier {
+    font-weight: 300;
+    color: #999;
+    margin-right: 6px; }
+  body.identity .details .input-section .col-md-6 > .input-group {
+    margin-top: 10px; }
 
 /*# sourceMappingURL=application.css.map */
